--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -2,57 +2,77 @@
   padding: 0;
   margin: 0;
   -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 html {
-  scroll-behavior: smooth; }
+  scroll-behavior: smooth;
+}
 
 /*GENERAL STYLING*/
 .burger {
   width: 40px;
   height: 40px;
   display: none;
-  flex-direction: column;
-  justify-content: space-evenly;
-  cursor: pointer; }
-  .burger .line {
-    width: 100%;
-    height: 5px;
-    background-color: white; }
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  cursor: pointer;
+}
+
+.burger .line {
+  width: 100%;
+  height: 5px;
+  background-color: white;
+}
 
 .section-title {
-  font-size: 3.5em;
+  font-size: 3.5rem;
   color: #16a085;
   font-family: "Passero One", cursive;
-  margin-bottom: 50px; }
+  margin-bottom: 50px;
+}
 
 .container {
   width: 70%;
-  margin: 0 auto; }
+  margin: 0 auto;
+}
 
 body {
   font-family: "Roboto", sans-serif;
-  font-size: 16px; }
+  font-size: 16px;
+}
 
 .btn-sec {
-  color: #2C3E50; }
-  .btn-sec:hover {
-    color: white;
-    background-color: #2C3E50; }
+  color: #2C3E50;
+}
+
+.btn-sec:hover {
+  color: white;
+  background-color: #2C3E50;
+}
 
 .btn-prim {
-  color: white; }
-  .btn-prim:hover {
-    background-color: white;
-    color: #16a085;
-    border-color: #fff; }
+  color: white;
+}
+
+.btn-prim:hover {
+  background-color: white;
+  color: #16a085;
+  border-color: #fff;
+}
 
 .btn-outline {
-  border: 2px solid; }
+  border: 2px solid;
+}
 
 .btn {
   border-radius: 5px;
+  -webkit-transition: .5s ease-in;
   transition: .5s ease-in;
   display: inline-block;
   width: 200px;
@@ -61,282 +81,458 @@ body {
   line-height: 50px;
   text-decoration: none;
   text-transform: uppercase;
-  letter-spacing: 1px; }
+  letter-spacing: 1px;
+}
 
 .btn-fill {
   background-color: #16a085;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  color: white; }
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  color: white;
+}
 
 #banner {
   width: 100%;
   height: 100vh;
   background-image: url("https://images.unsplash.com/photo-1480506132288-68f7705954bd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60");
-  -webkit-background-size: cover;
   background-size: cover;
   background-position: center;
   position: relative;
-  margin-bottom: 30px; }
-  #banner > * {
-    position: relative;
-    z-index: 1; }
-  #banner:after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #2C3E50;
-    opacity: .5; }
+  margin-bottom: 30px;
+}
+
+#banner > * {
+  position: relative;
+  z-index: 1;
+}
+
+#banner:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #2C3E50;
+  opacity: .5;
+}
 
 header {
   padding-top: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 100%;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   color: white;
-  margin-bottom: 250px; }
-  header > h1 {
-    text-transform: uppercase;
-    letter-spacing: 4px; }
-    header > h1 span {
-      color: #16a085; }
-  header nav {
-    width: 50%; }
-    header nav ul {
-      display: flex;
-      list-style-type: none;
-      justify-content: space-evenly;
-      align-items: center; }
-    header nav a {
-      color: white;
-      text-decoration: none; }
+  margin-bottom: 250px;
+}
+
+header > h1 {
+  text-transform: uppercase;
+  letter-spacing: 4px;
+}
+
+header > h1 span {
+  color: #16a085;
+}
+
+header nav {
+  width: 50%;
+}
+
+header nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style-type: none;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+header nav a {
+  color: white;
+  text-decoration: none;
+}
 
 .banner-content {
   text-align: center;
-  color: white; }
+  color: white;
+}
 
 .info-text {
   width: 50%;
-  margin: 50px auto; }
-  .info-text h1 {
-    font-size: 3em;
-    margin-bottom: 20px;
-    color: #16a085;
-    text-transform: uppercase;
-    letter-spacing: 3px; }
-  .info-text p {
-    font-size: 20px; }
+  margin: 50px auto;
+}
+
+.info-text h1 {
+  font-size: 3rem;
+  margin-bottom: 20px;
+  color: #16a085;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+}
+
+.info-text p {
+  font-size: 20px;
+}
 
 .buttons {
   width: 50%;
   margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-evenly;
-  margin-bottom: 50px; }
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  margin-bottom: 50px;
+}
 
 .social-icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 50%;
   margin: 0 auto;
-  justify-content: space-evenly; }
-  .social-icons a {
-    color: white;
-    font-size: 2em; }
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.social-icons a {
+  color: white;
+  font-size: 2rem;
+}
 
 #projects .project:nth-child(odd) .project-details {
-  order: 1;
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
   text-align: right;
-  margin-right: 20px; }
-  #projects .project:nth-child(odd) .project-details .tech-stack-icons {
-    justify-content: flex-end; }
+  margin-right: 20px;
+}
+
+#projects .project:nth-child(odd) .project-details .tech-stack-icons {
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
 
 #projects .project:nth-child(odd) .project-img {
-  order: 2; }
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
+}
 
 #projects .project {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  margin-bottom: 50px; }
-  #projects .project .project-img {
-    flex: 1; }
-    #projects .project .project-img img {
-      width: 100%;
-      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); }
-  #projects .project .project-details {
-    flex: 1;
-    margin-left: 20px; }
-    #projects .project .project-details h2 {
-      font-family: "Passero One", cursive;
-      font-size: 2em;
-      color: #16a085; }
-    #projects .project .project-details .tech-stack-icons {
-      display: flex;
-      justify-content: flex-start;
-      padding: 2em 0; }
-      #projects .project .project-details .tech-stack-icons i {
-        margin-right: 30px;
-        font-size: 1.5em; }
-    #projects .project .project-details p {
-      line-height: 1.5;
-      margin-bottom: 20px; }
-    #projects .project .project-details .project-buttons {
-      margin-top: 50px;
-      display: flex; }
-      #projects .project .project-details .project-buttons a:first-child {
-        margin-right: 50px; }
+  margin-bottom: 50px;
+}
+
+#projects .project .project-img {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+#projects .project .project-img img {
+  width: 100%;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+#projects .project .project-details {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  margin-left: 20px;
+}
+
+#projects .project .project-details h2 {
+  font-family: "Passero One", cursive;
+  font-size: 2rem;
+  color: #16a085;
+}
+
+#projects .project .project-details .tech-stack-icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  padding: 2rem 0;
+}
+
+#projects .project .project-details .tech-stack-icons i {
+  margin-right: 30px;
+  font-size: 1.5rem;
+}
+
+#projects .project .project-details p {
+  line-height: 1.5;
+  margin-bottom: 20px;
+}
+
+#projects .project .project-details .project-buttons {
+  margin-top: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#projects .project .project-details .project-buttons a:first-child {
+  margin-right: 50px;
+}
 
 #about-me {
   background-color: #16a085;
   color: white;
-  height: 100vh; }
-  #about-me .about-me-text {
-    width: 80%;
-    margin: 0 auto;
-    text-align: center; }
-    #about-me .about-me-text h1 {
-      margin-bottom: 20px;
-      text-transform: uppercase; }
-    #about-me .about-me-text h4 {
-      font-size: 1.5rem;
-      margin: 30px 0; }
-  #about-me .section-title {
-    color: white;
-    padding-top: 30px; }
+  height: 100vh;
+}
+
+#about-me .about-me-text {
+  width: 80%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+#about-me .about-me-text h1 {
+  margin-bottom: 20px;
+  text-transform: uppercase;
+}
+
+#about-me .about-me-text h4 {
+  font-size: 1.5rem;
+  margin: 30px 0;
+}
+
+#about-me .section-title {
+  color: white;
+  padding-top: 30px;
+}
 
 #skills-section .skills-container {
-  display: flex; }
-  #skills-section .skills-container .front-end, #skills-section .skills-container .other, #skills-section .skills-container .backend {
-    text-align: center;
-    margin-top: -300px;
-    padding: 2em;
-    border-radius: 10px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); }
-    #skills-section .skills-container .front-end ul, #skills-section .skills-container .other ul, #skills-section .skills-container .backend ul {
-      list-style-type: none;
-      line-height: 3; }
-    #skills-section .skills-container .front-end h3, #skills-section .skills-container .other h3, #skills-section .skills-container .backend h3 {
-      font-size: 1.5em;
-      margin-bottom: 50px; }
-  #skills-section .skills-container .front-end, #skills-section .skills-container .other {
-    flex: 1;
-    background-color: white; }
-  #skills-section .skills-container .front-end {
-    margin-right: -30px; }
-  #skills-section .skills-container .other {
-    margin-left: -30px; }
-  #skills-section .skills-container .backend {
-    z-index: 1;
-    background-color: #2C3E50;
-    flex: 2;
-    color: white;
-    margin-top: -400px; }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#skills-section .skills-container .front-end, #skills-section .skills-container .other, #skills-section .skills-container .backend {
+  text-align: center;
+  margin-top: -300px;
+  padding: 2rem;
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+#skills-section .skills-container .front-end ul, #skills-section .skills-container .other ul, #skills-section .skills-container .backend ul {
+  list-style-type: none;
+  line-height: 3;
+}
+
+#skills-section .skills-container .front-end h3, #skills-section .skills-container .other h3, #skills-section .skills-container .backend h3 {
+  font-size: 1.5rem;
+  margin-bottom: 50px;
+}
+
+#skills-section .skills-container .front-end, #skills-section .skills-container .other {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  background-color: white;
+}
+
+#skills-section .skills-container .front-end {
+  margin-right: -30px;
+}
+
+#skills-section .skills-container .other {
+  margin-left: -30px;
+}
+
+#skills-section .skills-container .backend {
+  z-index: 1;
+  background-color: #2C3E50;
+  -webkit-box-flex: 2;
+      -ms-flex: 2;
+          flex: 2;
+  color: white;
+  margin-top: -400px;
+}
 
 #contact-me {
   background-color: #2C3E50;
   height: 100vh;
   margin-top: 50px;
-  position: relative; }
-  #contact-me a {
-    text-decoration: none;
-    color: #2C3E50;
-    width: 250px;
-    height: 100px;
-    text-align: center;
-    line-height: 100px;
-    background-color: ghostwhite;
-    border-radius: 5px;
-    font-weight: 700;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); }
+  position: relative;
+}
+
+#contact-me a {
+  text-decoration: none;
+  color: #2C3E50;
+  width: 250px;
+  height: 100px;
+  text-align: center;
+  line-height: 100px;
+  background-color: ghostwhite;
+  border-radius: 5px;
+  font-weight: 700;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
 
 @media screen and (max-width: 1024px) {
   .section-title {
-    text-align: center; }
+    text-align: center;
+  }
   #banner .container {
-    width: 100%; }
+    width: 100%;
+  }
   #banner header {
-    flex-direction: column;
-    margin-bottom: 50px; }
-    #banner header nav {
-      width: 100%; }
-    #banner header ul {
-      flex-direction: column; }
-      #banner header ul li {
-        text-align: center;
-        width: 100%; }
-        #banner header ul li a {
-          width: 100%;
-          display: block;
-          background-color: #16a085;
-          padding: 1em; }
-        #banner header ul li:last-child {
-          background-color: #2C3E50; }
-          #banner header ul li:last-child a {
-            background-color: #2C3E50;
-            border-radius: 0px;
-            transition: none;
-            height: auto;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-bottom: 50px;
+  }
+  #banner header nav {
+    width: 100%;
+  }
+  #banner header ul {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  #banner header ul li {
+    text-align: center;
+    width: 100%;
+  }
+  #banner header ul li a {
+    width: 100%;
+    display: block;
+    background-color: #16a085;
+    padding: 1em;
+  }
+  #banner header ul li:last-child {
+    background-color: #2C3E50;
+  }
+  #banner header ul li:last-child a {
+    background-color: #2C3E50;
+    border-radius: 0px;
+    -webkit-transition: none;
+    transition: none;
+    height: auto;
+    -webkit-box-shadow: none;
             box-shadow: none;
-            text-align: center;
-            line-height: 1;
-            text-decoration: none;
-            text-transform: uppercase;
-            letter-spacing: 0; }
+    text-align: center;
+    line-height: 1;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 0;
+  }
   #banner h1 {
-    font-size: 1.3em;
-    padding-top: 1.5em;
-    margin-bottom: 20px; }
+    font-size: 1.3rem;
+    padding-top: 1.5rem;
+    margin-bottom: 20px;
+  }
   .banner-content h1 {
-    font-size: 1.5em;
-    text-transform: uppercase; }
+    font-size: 1.5rem;
+    text-transform: uppercase;
+  }
   .banner-content p {
-    font-size: .80em; }
+    font-size: .80rem;
+  }
   .banner-content .buttons {
-    font-size: .80em;
-    width: 100% !important; }
+    font-size: .80rem;
+    width: 100% !important;
+  }
   #projects .project {
-    flex-direction: column; }
-    #projects .project .project-details {
-      text-align: center !important; }
-      #projects .project .project-details h2 {
-        margin-top: 30px; }
-      #projects .project .project-details .project-buttons {
-        justify-content: center;
-        font-size: .75em; }
-      #projects .project .project-details .tech-stack-icons {
-        justify-content: center !important; }
-    #projects .project:nth-child(odd) .project-details {
-      order: 2; }
-    #projects .project:nth-child(odd) .project-img {
-      order: 1; }
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  #projects .project .project-details {
+    text-align: center !important;
+  }
+  #projects .project .project-details h2 {
+    margin-top: 30px;
+  }
+  #projects .project .project-details .project-buttons {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    font-size: .75rem;
+  }
+  #projects .project .project-details .tech-stack-icons {
+    -webkit-box-pack: center !important;
+        -ms-flex-pack: center !important;
+            justify-content: center !important;
+  }
+  #projects .project:nth-child(odd) .project-details {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+  #projects .project:nth-child(odd) .project-img {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
   #skills-section {
-    margin-top: 50px; }
-    #skills-section .skills-container {
-      flex-direction: column; }
-      #skills-section .skills-container .backend, #skills-section .skills-container .front-end, #skills-section .skills-container .other {
-        margin: 50px 0;
-        -webkit-border-radius: 0;
-        -moz-border-radius: 0;
-        border-radius: 0; } }
+    margin-top: 50px;
+  }
+  #skills-section .skills-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  #skills-section .skills-container .backend, #skills-section .skills-container .front-end, #skills-section .skills-container .other {
+    margin: 50px 0;
+    border-radius: 0;
+  }
+}
 
 .fa-laravel {
-  color: #F05340; }
+  color: #F05340;
+}
 
 .fa-html5 {
-  color: #F16529; }
+  color: #F16529;
+}
 
 .fa-css3-alt {
-  color: #264de4; }
+  color: #264de4;
+}
 
 .fa-bootstrap {
-  color: #602C50; }
+  color: #602C50;
+}
 
 .fa-sass {
-  color: #cd6799; }
+  color: #cd6799;
+}
+/*# sourceMappingURL=main.css.map */
