--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -28,7 +28,7 @@ html
     background-color: white
 
 .section-title
-  font-size: 3.5em
+  font-size: 3.5rem
   color: $primary
   font-family: $passero
   margin-bottom: 50px
@@ -138,7 +138,7 @@ header
   margin: 50px auto
 
   h1
-    font-size: 3em
+    font-size: 3rem
     margin-bottom: 20px
     color: $primary
     text-transform: uppercase
@@ -160,7 +160,7 @@ header
   a
     color: white
 
-    font-size: 2em
+    font-size: 2rem
 
 
 //Reverse order of projects.
@@ -190,15 +190,15 @@ header
       h2
         font-family: $passero
 
-        font-size: 2em
+        font-size: 2rem
         color: $primary
       .tech-stack-icons
         display: flex
         justify-content: flex-start
-        padding: 2em 0
+        padding: 2rem 0
         i
           margin-right: 30px
-          font-size: 1.5em
+          font-size: 1.5rem
       p
         line-height: 1.5
         margin-bottom: 20px
@@ -235,14 +235,14 @@ header
     .front-end, .other, .backend
       text-align: center
       margin-top: -300px
-      padding: 2em
+      padding: 2rem
       border-radius: 10px
       box-shadow: $shadow
       ul
         list-style-type: none
         line-height: 3
       h3
-        font-size: 1.5em
+        font-size: 1.5rem
 
         margin-bottom: 50px
     .front-end, .other
@@ -317,17 +317,17 @@ header
               letter-spacing: 0
 
     h1
-      font-size: 1.3em
-      padding-top: 1.5em
+      font-size: 1.3rem
+      padding-top: 1.5rem
       margin-bottom: 20px
   .banner-content
     h1
-      font-size: 1.5em
+      font-size: 1.5rem
       text-transform: uppercase
     p
-      font-size: .80em
+      font-size: .80rem
     .buttons
-      font-size: .80em
+      font-size: .80rem
       width: 100% !important
   #projects .project
     flex-direction: column
@@ -338,7 +338,7 @@ header
       .project-buttons
         justify-content: center
 
-        font-size: .75em
+        font-size: .75rem
       .tech-stack-icons
         justify-content: center !important
     &:nth-child(odd)
